unpackaged/main/default/objects/Campaign/fields/Associated_Account__c.field-meta.xml
<CustomField>
    <fullName>Associated_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Adds the option to associate an Account with a Campaign.</description>
    <label>Associated Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>