unpackaged/main/default/objects/Campaign/fields/Campus__c.field-meta.xml
<CustomField>
    <fullName>Campus__c</fullName>
    <description>Campus of the user that created this Campaign</description>
    <formula>CreatedBy.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Campus of the user that created this Campaign</inlineHelpText>
    <label>Campus</label>
    <type>Text</type>
</CustomField>