unpackaged/main/default/objects/Campaign/fields/simplesms__Enforce_Single_Conversation__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Enforce_Single_Conversation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if a Lead/Contact can only receive the auto responses one time.  When this is unchecked, the Lead/Contact will receive the auto response each time they text the keyword.</description>
    <inlineHelpText>Check this box if a Lead/Contact can only receive the auto responses one time.  When this is unchecked, the Lead/Contact will receive the auto response each time they text the keyword.</inlineHelpText>
    <label>Enforce Single Conversation</label>
    <type>Checkbox</type>
</CustomField>