unpackaged/main/default/objects/Campaign/fields/simplesms__Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Phone_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The phone number associated with this campaign.</description>
    <inlineHelpText>The phone number associated with this campaign.</inlineHelpText>
    <label>Phone Number</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>simplesms__PhoneNumber__c.simplesms__Available_for_Campaign__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>simplesms__PhoneNumber__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>