unpackaged/main/default/objects/Campaign/fields/simplesms__Phone_Number_Display__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Phone_Number_Display__c</fullName>
    <description>Display the related Phone Number digits.</description>
    <formula>simplesms__Phone_Number__r.simplesms__PhoneNumber__c</formula>
    <inlineHelpText>Display the related Phone Number digits.</inlineHelpText>
    <label>Phone Number (Display)</label>
    <type>Text</type>
</CustomField>