unpackaged/main/default/objects/Campaign/fields/simplesms__Prevent_Conflict__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Prevent_Conflict__c</fullName>
    <description>A uniqueness field that will prevent two Active Campaigns from using the same phone number.</description>
    <inlineHelpText>A uniqueness field that will prevent two Active Campaigns from using the same phone number.</inlineHelpText>
    <label>Prevent Conflict</label>
    <length>80</length>
    <type>Text</type>
</CustomField>