unpackaged/main/default/objects/Campaign/fields/simplesms__Scheduled__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Scheduled__c</fullName>
    <description>The time for the next scheduled message.</description>
    <inlineHelpText>The time for the next scheduled message.</inlineHelpText>
    <label>Scheduled</label>
    <type>DateTime</type>
</CustomField>