unpackaged/main/default/objects/Campaign/fields/simplesms__SMS_Keyword__c.field-meta.xml
<CustomField>
    <fullName>simplesms__SMS_Keyword__c</fullName>
    <description>The keyword associated with this campaign.</description>
    <inlineHelpText>The keyword associated with this campaign.</inlineHelpText>
    <label>SMS Keyword</label>
    <length>80</length>
    <type>Text</type>
</CustomField>