unpackaged/main/default/objects/Campaign/fields/simplesms__Total_Response_Rules__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Total_Response_Rules__c</fullName>
    <description>The total number of response rules for this Campaign.</description>
    <inlineHelpText>The total number of response rules for this Campaign.</inlineHelpText>
    <label>Total Response Rules</label>
    <summaryForeignKey>simplesms__SMS_Campaign_Response_Rule__c.simplesms__Campaign__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>