unpackaged/main/default/objects/Campaign/listViews/Academic_Program_Information_Sessions.listView-meta.xml
<ListView>
    <fullName>Academic_Program_Information_Sessions</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PARENT_NAME</field>
        <operation>equals</operation>
        <value>Academic Program Information Sessions</value>
    </filters>
    <label>Academic Program Information Sessions</label>
</ListView>