unpackaged/main/default/objects/Campaign/listViews/All_Planned_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Planned_Campaigns</fullName>
    <columns>Associated_Account__c</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>equals</operation>
        <value>Planned</value>
    </filters>
    <label>All Planned Campaigns</label>
</ListView>