unpackaged/main/default/objects/Campaign/listViews/Campaigns_Created_Last_3_Weeks.listView-meta.xml
<ListView>
    <fullName>Campaigns_Created_Last_3_Weeks</fullName>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>conference360__Event__c</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Associated_Account__c</columns>
    <columns>num_emails_delivered</columns>
    <columns>num_unique_email_opens</columns>
    <columns>rollup_num_unique_email_clicks</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>notEqual</operation>
        <value>Gio,Amber,Sergio</value>
    </filters>
    <filters>
        <field>CAMPAIGN.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:28</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>hexantus,jruiz6,kguerra2</value>
    </filters>
    <label>Campaigns - Created Last 3 Weeks</label>
</ListView>