unpackaged/main/default/objects/Campaign/listViews/Campaigns_with_no_Account.listView-meta.xml
<ListView>
    <fullName>Campaigns_with_no_Account</fullName>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Associated_Account__c</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>num_emails_delivered</columns>
    <columns>num_unique_email_opens</columns>
    <columns>rollup_num_unique_email_clicks</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Associated_Account__c</field>
        <operation>equals</operation>
    </filters>
    <label>Campaigns with no Account</label>
    <sharedTo>
        <group>CRM_Core_Team</group>
        <group>Info_Center</group>
    </sharedTo>
</ListView>