unpackaged/main/default/objects/Campaign/listViews/Campus_Inquiry_Forms_Campaigns.listView-meta.xml
<ListView>
    <fullName>Campus_Inquiry_Forms_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PARENT_NAME</field>
        <operation>equals</operation>
        <value>Inquiry Form - Campus Specific - FH - Parent</value>
    </filters>
    <label>Campus Inquiry Forms Campaigns</label>
</ListView>