unpackaged/main/default/objects/Campaign/listViews/Hialeah_Campaigns.listView-meta.xml
<ListView>
    <fullName>Hialeah_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Associated_Account__c</field>
        <operation>equals</operation>
        <value>Hialeah Campus</value>
    </filters>
    <label>Hialeah Campaigns</label>
    <sharedTo>
        <group>CRM_Core_Team</group>
        <group>Hialeah_Campus_Public_Group</group>
    </sharedTo>
</ListView>