unpackaged/main/default/objects/Campaign/listViews/Lead_Follow_Up.listView-meta.xml
<ListView>
    <fullName>Lead_Follow_Up</fullName>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>Associated_Account__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>num_emails_delivered</columns>
    <columns>num_unique_email_opens</columns>
    <columns>rollup_num_unique_email_clicks</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>equals</operation>
        <value>Lead Follow-up</value>
    </filters>
    <label>Lead Follow-Up</label>
</ListView>