unpackaged/main/default/objects/Campaign/listViews/North_Lead_Follow_Up.listView-meta.xml
<ListView>
    <fullName>North_Lead_Follow_Up</fullName>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>Associated_Account__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>num_emails_delivered</columns>
    <columns>num_unique_email_opens</columns>
    <columns>rollup_num_unique_email_clicks</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>equals</operation>
        <value>Lead Follow-up</value>
    </filters>
    <filters>
        <field>Associated_Account__c</field>
        <operation>equals</operation>
        <value>North Campus</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>notEqual</operation>
        <value>sferre</value>
    </filters>
    <label>North Lead Follow-Up</label>
    <sharedTo>
        <group>CRM_Core_Team</group>
        <group>North_Campus_Public_Group</group>
    </sharedTo>
</ListView>