unpackaged/main/default/objects/Campaign/listViews/Open_House_Campaigns.listView-meta.xml
<ListView>
    <fullName>Open_House_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PARENT_NAME</field>
        <operation>equals</operation>
        <value>Open House</value>
    </filters>
    <label>Open House Campaigns</label>
</ListView>